--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vue todolist</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center">
+                    <h1 class="my-4">Vue todolist</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="content">
+                    <h5><strong>LA MIA TODOLIST</strong></h5>
+                    <hr>
+                    <ul class="list-unstyled">
+                        <li>task 1</li>
+                        <li>task 2</li>
+                        <li>task 3</li>
+                        <li>task 4</li>
+                        <li>task 5</li>
+                        <li>task 6</li>
 
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
