--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vue todolist</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +13,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center">
-                    <h1 class="my-4">Vue todolist</h1>
+                    <h1 class="mt-4">Vue todolist</h1>
                 </div>
             </div>
         </div>
@@ -22,14 +23,104 @@
                     <h5><strong>LA MIA TODOLIST</strong></h5>
                     <hr>
                     <ul class="list-unstyled">
-                        <li>task 1</li>
-                        <li>task 2</li>
-                        <li>task 3</li>
-                        <li>task 4</li>
-                        <li>task 5</li>
-                        <li>task 6</li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    task 1 
+                                </div>
+                                <div>
+                                    <button class="btn btn-sm btn-danger">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    task 2 
+                                </div>
+                                <div>
+                                    <button class="btn btn-sm btn-danger">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    task 3 
 
+                                </div>
+                                <div>
+                                    <button class="btn btn-sm btn-danger">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+
+                                </div>
+
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    task 4 
+
+                                </div>
+                                <div>
+                                    <button class="btn btn-sm btn-danger">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+
+                                </div>
+
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    task 5 
+
+                                </div>
+                                <div>
+                                    <button class="btn btn-sm btn-danger">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+
+                                </div>
+
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    task 6 
+
+                                </div>
+                                <div>
+                                    <button class="btn btn-sm btn-danger">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+
+                                </div>
+
+                            </div>
+                        </li>
                     </ul>
+                    <div class="input-group">
+                        <div class="input-field">
+                            <input type="text" class="input-task" name="new_task" id="new_task" placeholder="aggiungi task">
+
+                        </div>
+                        <div class="input-button">
+                            <button class="btn btn-sm btn-success">
+                                <i class="fas fa-plus mr-2"></i>
+                                aggiungi
+                            </button>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -37,3 +128,11 @@
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+                        
